# e-Paper

./: .gitignore  README.md  Special Reminder.txt  Version_CN.txt  Version_EN.txt  特别提醒.txt
1.54inch_e-paper_b_code/: README.md
1.54inch_e-paper_b_code/bcm2835/: Makefile  epd
1.54inch_e-paper_b_code/python2/: epd1in54b.py  readme.txt
1.54inch_e-paper_b_code/python3/: epd1in54b.py  epdconfig.py  main.py
1.54inch_e-paper_b_code/wiringpi/: epd
1.54inch_e-paper_c_code/: README.md
1.54inch_e-paper_c_code/bcm2835/: readme.txt
1.54inch_e-paper_c_code/python2/: epd1in54.py  main.py
1.54inch_e-paper_c_code/python3/: epd1in54.py  main.py
1.54inch_e-paper_code/: README.md
1.54inch_e-paper_code/bcm2835/: epd
1.54inch_e-paper_code/python2/: epd1in54.py
1.54inch_e-paper_code/wiringpi/: epd
2.13inch_e-paper_b&c_code/: README.md
2.13inch_e-paper_b&c_code/bcm2835/: epd
2.13inch_e-paper_b&c_code/python2/: epd2in13b.py  main.py
2.13inch_e-paper_b&c_code/python3/: epd2in13b.py  main.py
2.13inch_e-paper_code/: README.md
2.13inch_e-paper_code/python2/: epd2in13.py
2.13inch_e-paper_code/python3/: epd2in13.py  main.py
2.13inch_e-paper_code/wiringpi/: epd
2.13inch_e-paper_d_code/: README.md
2.13inch_e-paper_d_code/bcm2835/: epd
2.13inch_e-paper_d_code/python2/: epd2in13d.py
2.13inch_e-paper_d_code/python3/: epd2in13d.py
2.7inch_e-paper_b_code/: README.md
2.7inch_e-paper_b_code/bcm2835/: epd
2.7inch_e-paper_b_code/python2/: epd2in7b.py
2.7inch_e-paper_b_code/python3/: epd2in7b.py  main.py
2.7inch_e-paper_code/: README.md
2.7inch_e-paper_code/bcm2835/: epd
2.9inch_e-paper_b&c_code/: README.md
2.9inch_e-paper_code/: README.md
4.2inch_e-paper_b&c_code/: README.md
4.2inch_e-paper_code/: README.md
5.83inch_e-paper_b&c_code/: README.md
5.83inch_e-paper_code/: README.md
7.5inch_e-paper_b&c_code/: README.md
7.5inch_e-paper_code/: README.md
Arduino/: README.md
Arduino_R4/: Arduino_R4.ino
RaspberryPi_JetsonNano/python/: dynamic_dependencies.py  pyproject.toml  readme_jetson_CN.txt  readme_jetson_EN.txt  readme_rpi_CN.txt  readme_rpi_EN.txt  readme_sunrise_CN.txt  readme_sunrise_EN.txt  requirements.txt  setup.py
RaspberryPi_JetsonNano/python/examples/: blackHole_test.py  epd_13in3k_test.py  epd_1in02_test.py  epd_1in54_V2_test.py  epd_1in54_test.py  epd_1in54b_V2_test.py  epd_1in54b_test.py  epd_1in54c_test.py  epd_1in64g_test.py  epd_2in13_V2_test.py  epd_2in13_V3_test.py  epd_2in13_V4_test.py  epd_2in13_test.py  epd_2in13b_V3_test.py  epd_2in13b_V4_test.py  epd_2in13bc_test.py  epd_2in13d_test.py  epd_2in13g_test.py  epd_2in15b_test.py  epd_2in15g_test.py  epd_2in36g_test.py  epd_2in66_test.py  epd_2in66b_test.py  epd_2in66g_test.py  epd_2in7_V2_test.py  epd_2in7_test.py  epd_2in7b_V2_test.py  epd_2in7b_test.py  epd_2in9_V2_test.py  epd_2in9_test.py  epd_2in9b_V3_test.py  epd_2in9bc_test.py  epd_2in9d_test.py  epd_3in0g_test.py  epd_3in52_test.py  epd_3in7_test.py  epd_4in01f_test.py  epd_4in02f_test.py  epd_4in26_test.py  epd_4in2_V2_test.py  (+19 more)
RaspberryPi_JetsonNano/python/lib/waveshare_epd/: epd13in3b.py  epd13in3k.py  epd1in02.py  epd1in54.py  epd1in54_V2.py  epd1in54b.py  epd1in54b_V2.py  epd1in54c.py  epd1in64g.py  epd2in13.py  epd2in13_V2.py  epd2in13_V3.py  epd2in13_V4.py  epd2in13b_V3.py  epd2in13b_V4.py  epd2in13bc.py  epd2in13d.py  epd2in13g.py  epd2in15b.py  epd2in36g.py  epd2in66.py  epd2in66b.py  epd2in7.py  epd2in7_V2.py  epd2in7b.py  epd2in7b_V2.py  epd2in9.py  epd2in9_V2.py  epd2in9b_V3.py  epd2in9b_V4.py  epd2in9bc.py  epd2in9d.py  epd3in0g.py  epd3in52.py  epd3in7.py  epd4in01f.py  epd4in0e.py  epd4in2.py  epd4in2_V2.py  epd4in2b_V2.py  (+23 more)
Realtek_AmebaAIoT/: ReadMe.txt
STM32/: ReadMe.txt
epaper_demo_sample/: CMakeLists.txt
epaper_demo_sample/boards/: nrf52dk_nrf52832.conf
zephyr-epaper-project/: BUILD_ERRORS_FIXED.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FIXES_APPLIED.md  HARDWARE_GUIDE.md  Kconfig  PROJECT_SUMMARY.md  QUICK_START.md  README.md  setup_lvgl.sh
zephyr-epaper-project/boards/: nrf52dk_nrf52832_xxaa.overlay
zephyr-epaper-project/drivers/epaper/: epd_2in9_v2.c
zephyr-epaper-project/dts/bindings/: waveshare,epd-2in9-v2.yaml
zephyr-epaper-project/include/drivers/: epd_2in9_v2.h
zephyr-epaper-project/lib/lvgl/: CMakeLists.txt  Kconfig  lv_conf.h  lvgl_epaper_driver.c  lvgl_epaper_driver.h
zephyr-epaper-project/samples/epaper_demo/: CMakeLists.txt  README.md  build.sh  prj.conf
zephyr-epaper-project/samples/epaper_demo/boards/: nrf52833dk_nrf52833.conf  nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.conf  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
zephyr-epaper-project/samples/epaper_demo/src/: main.c
zephyr-epaper-project/samples/gpio_test/: CMakeLists.txt  prj.conf
zephyr-epaper-project/samples/gpio_test/src/: main.c
zephyr-epaper-project/zephyr/: CMakeLists.txt  module.yml
(+2413 files in other folders)
